fixed the design to dark mode.

--- a/client/src/Style.css
+++ b/client/src/Style.css
@@ -59,10 +59,10 @@
 /* testimonals */
 
 body{
-	background-color: #fff;
+	background-color: #17191e !important;
 }
 .container{
-	background-color: #fff;
+	background-color: #17191e;
 	width: auto; 
 }
 .card{
